[package]
name = "pseudotcp"
version = "0.1.3"
description = "pseudo-TCP bindings for libnice"
homepage = "https://github.com/manuels/pseudotcp.rs"
license = " GPL-2.0"
authors = ["Manuel Schölling <manuel.schoelling@gmx.de>"]

[dependencies]
bitflags = "0.7"
libc = "^0.2"
log = "^0.3.6"
env_logger = "^0.3.3"
condition_variable = "^0.1"
